--- a/package.json
+++ b/package.json
@@ -12,10 +12,15 @@
     "generate-pwa-assets": "pwa-assets-generator"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "2.4.0",
     "react-qr-reader": "^3.0.0-beta-1",
-    "react-router-dom": "^6.23.1"
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.23.1",
+    "react-spring-bottom-sheet": "3.5.0-alpha.0",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
